[tool.poetry]
name = "plugin-tests"
version = "0.1.0"
description = "Tests for the autopilot paper"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
auto-pi-lot = {git="https://github.com/wehr-lab/autopilot", branch="v0.5.0", extras=['pilot']}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
