[tool.poetry]
name = "plugin-tests"
version = "0.1.0"
description = "Tests for the autopilot paper"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "Unlicense"
packages = [
    { include = "plugin_tests" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
auto-pi-lot = {git="https://github.com/wehr-lab/autopilot", branch="v0.5.0", extras=['pilot']}
gpiozero = "^1.6.2"
"RPi.GPIO" = "^0.7.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
